cabal-version:      2.4
name:               haskell-learn
version:            0.1.0.0

author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable haskell-learn
    main-is:          Main.hs
    build-depends:    haskell-learn, base ^>=4.14.3.0
    hs-source-dirs:   src 
    default-language: Haskell2010

library
    exposed-modules:  Tree, Network, Threads, Monads
    build-depends:    bytestring, network, base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010
